# CPUFreqUtility

./: CMakeLists.txt  PKGBUILD
src/: CMakeLists.txt
src/helper/: CMakeLists.txt
